@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 5.0.0), bzip2, sharutils, flex-old | flex,
  @cc_pkg@, libdb-dev,
  libsbuf-dev (>= 9.0+ds1-2),
  kernel-wedge (>= 2.88) [kfreebsd-any],
+ ctfutils,
 Standards-Version: 3.9.2
 
 Package: kfreebsd-source-@version@
