@@ -3,6 +3,8 @@ kfreebsd-11 (11.0~svn258494-2) UNRELEASED; urgency=low
   * Implement a watchdog to detect when upstream switches to a new Clang
     version.
   * Disable pty(4) to follow upstream.
+  * Build with CTF debug information, and enable KDTRACE_HOOKS (DTrace
+    hooks) and DDB_CTF (CTF support in ELF loader) for debug builds.
 
  -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 14:05:10 +0100
 
